--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".JobActivity"></activity>
+        <activity android:name=".GetjobActivity"></activity>
+        <activity android:name=".JobActivity" />
         <activity android:name=".JobpageActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".DetailsActivity" />
