--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,8 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET">
-
-    </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
 
     <application
         android:allowBackup="true"
@@ -15,15 +14,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GetjobActivity"
-            android:parentActivityName=".JobpageActivity"></activity>
-        <activity android:name=".JobActivity"
-            android:parentActivityName=".JobpageActivity"/>
+        <activity
+            android:name=".GetjobActivity"
+            android:parentActivityName=".JobpageActivity" />
+        <activity
+            android:name=".JobActivity"
+            android:parentActivityName=".JobpageActivity" />
         <activity android:name=".JobpageActivity" />
-        <activity android:name=".LoginActivity"
-            android:parentActivityName=".NextActivity"/>
-        <activity android:name=".DetailsActivity"
-            android:parentActivityName=".NextActivity"/>
+        <activity
+            android:name=".LoginActivity"
+            android:parentActivityName=".NextActivity" />
+        <activity
+            android:name=".DetailsActivity"
+            android:parentActivityName=".NextActivity" />
         <activity android:name=".NextActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
